[gd_scene load_steps=4 format=3 uid="uid://bhrcjniby014c"]

[ext_resource type="Script" path="res://gamePane.gd" id="1_lsthh"]
[ext_resource type="Texture2D" uid="uid://2w4mctriq0u5" path="res://资源/图片/diamond_pickaxe.png" id="2_saivs"]
[ext_resource type="Texture2D" uid="uid://ca22iwtlmy3sq" path="res://资源/图片/oak_sign.png" id="3_kbhlr"]

[node name="GamePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lsthh")

[node name="PanelHead" type="HBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
alignment = 1

[node name="Menu" type="Button" parent="PanelHead"]
custom_minimum_size = Vector2(100, 64)
layout_mode = 2
text = "主菜单"
icon_alignment = 1

[node name="DigType" type="Button" parent="PanelHead"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("2_saivs")
clip_text = true
icon_alignment = 1

[node name="MarkType" type="Button" parent="PanelHead"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("3_kbhlr")
icon_alignment = 1

[node name="ReSet" type="Button" parent="PanelHead"]
custom_minimum_size = Vector2(100, 64)
layout_mode = 2
text = "重置游戏"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
offset_left = 10.0
offset_top = 84.0
offset_right = 638.0
offset_bottom = 604.0
follow_focus = true

[node name="MainPanel" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="PanelFooter" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ButtonCount" type="Label" parent="PanelFooter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "  难度"
vertical_alignment = 1

[node name="NotFoundDiamondCount" type="Label" parent="PanelFooter"]
layout_mode = 2
size_flags_horizontal = 3
text = "未发掘钻石"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayTime" type="Label" parent="PanelFooter"]
layout_mode = 2
size_flags_horizontal = 3
text = "时间  "
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="PanelHead/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PanelHead/DigType" to="." method="_on_dig_type_pressed"]
[connection signal="pressed" from="PanelHead/MarkType" to="." method="_on_mark_type_pressed"]
[connection signal="pressed" from="PanelHead/ReSet" to="." method="_on_re_set_pressed"]
